* Text Mark5 XLRReadData() calls by tainting the end of the destination buffer and verifying it gets untainted.
* Add more generalized support for the zoo of Mark5 module directory
* When reading data from Mark5 units, verify that the data is in the same format class as requested by the .input file.
* Improve Mark5B decoding

Version 2.3
~~~~~~~~~~~
* LO offset correction is now always done with fringe rotation (so in the 
  time domain if fringe rotation is in the time domain).  Allows larger
  LO offsets to be corrected without inducing decorrelation.
* Working polarization dependent delay and phase offsets (from Chris)
* Experimental linear2circular conversion (from Chris)
* Complex Double sideband (RDBE/Xcube) sampling support (from Chris)
* Explicitly set pthreads as joinable
* Fix one aspect of non-power-of-two VDIF threads
* Always close Mark5 device before freeing semaphore
* Always set Mark5 into playback configuration
* Move some Mark5 functions around to simplify things for the new VDIF code
* Fully new Mark5B and VDIF datastream code for files and Mark5 units
* Explicitly split up all Mark5 reads longer than 20MB
* Never change Mark5 .dir files
* Check Mark5 reads for lots of zero values and perform re-read if so
* Support (maybe???) multi-threaded complex VDIF data
* Bug fix: handle cases where the length in bytes of a first Mark5 scan is less than expected based on duration
* (lightly tested?) support for single-thread Legacy VDIF data
* fixed bug where send size could be computed incorrectly by 1-2 bytes for 
  Mark4/VLBA/Mark5B/VDIF formats, potentially resulting in very small amounts of data loss
* Tagged for DiFX-2.3, Dec 20, 2013

Version 2.2
~~~~~~~~~~~
* Correct scaling of autocorrelations for LBA-format data
* Optimized corner turners implemented for interlaced VDIF
* Fixed a scaling bug for zoom band data
* Allow building without IPP (needs fftw) [Thanks Richard Dodson!]